src/test/ui/issues/issue-11740.stderr
error: compilation successful
  --> $DIR/issue-11740.rs:35:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     let element = Element { attrs: Vec::new() };
LL | |     let _ = unsafe { element.get_attr("foo") };
LL | | }
   | |_^

error: aborting due to previous error

